# MagmaPandas

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/_static/: custom.css
docs/source/: about.rst  benchmarks.rst  bibliography.rst  changelog.rst  code_documentation.rst  conf.py  examples.rst  extending.rst  getting_started.rst  index.rst  license.rst  models.rst  ref.bib  substitutions.rst
docs/source/_static/: custom.css
docs/source/notebooks/: Fe3Fe2_calibration_plots.ipynb  Fe3Fe2_errors.ipynb  calibration_plots.ipynb  config.ipynb  frame_basics.ipynb  melt_basics.ipynb  mineral_basics.ipynb
src/: density.py
src/MagmaPandas/: Elements.py  Magma_baseclass.py  __init__.py  clinopyroxene.py  configuration.py  enums.py  liquid_density.py  magma_baseclass.py  model_errors.py  olivine.py  plagioclase.py
src/MagmaPandas/EOSs/: birch_murnaghan.py  parameters.py  tait.py  tools.py  vinet.py
src/MagmaPandas/Fe_redox/: Fe3Fe2_baseclass.py  Fe3Fe2_calculate.py  Fe3Fe2_errors.py  Fe3Fe2_models.py  Fe_redox.py  Fe_redox_baseclass.py  __init__.py  models.py
src/MagmaPandas/Kd/: Kd_baseclass.py  __init__.py  ol_melt.py
src/MagmaPandas/MagmaFrames/: __init__.py  clinopyroxene.py  configuration.py  ilmenite.py  magmaFrame.py  magmaFrame_baseclass.py  magnetite.py  melt.py  melt_inclusion.py  mineral.py  olivine.py  plagioclase.py  protocols.py
src/MagmaPandas/MagmaSeries/: MagmaSeries_baseclass.py  __init__.py
src/MagmaPandas/PEC/: Fe_eq_model.py  PEC.py  PEC_configuration.py  PEC_functions.py  PEC_vectorised.py  __init__.py  accumulation.py  cryst_correction_model.py
src/MagmaPandas/core/: enums.py  indexing_assignment.py  magma_protocol.py
src/MagmaPandas/fO2/: IW.py  NNO.py  QFM.py  RuRuO2.py  __init__ .py  __init__.py  eos_minerals.py  fO2.py  fO2_calculate.py
src/MagmaPandas/file_readers/: readers.py
src/MagmaPandas/geochemistry/: Fe_redox.py  Kd.py  Kd_ol_melt.py  PEC.py  __init__.py  eos.py  eos_minerals.py  eos_volatiles.py  fO2.py  old.py  old_PEC.py  volatiles.py  volatiles_old.py
src/MagmaPandas/liquid_density/: __init__.py  density.py
src/MagmaPandas/model_calibrations/: __init__.py  plot_calibration.py
src/MagmaPandas/parse/: __init__.py  iterate.py  readers.py  validate.py
src/MagmaPandas/parse_io/: parse.py  (+3 more)
src/VolaSol/: EOS.py  __init__.py  calculate_volatiles.py  isobars.py
src/elements/: elements.py  periodic_table.py
src/geoplot/: TAS.py  TAS_diagram.py  __init__.py  layout.py  plot_layout.py  rhodes.py  trace_elements  trace_elements.py
src/volatile_solubility/: isobars.py
tests/: Allison.ipynb  MafiCH_satpress.py  PECcorrection.ipynb  PECcorretion.ipynb  bulk_equilibration.ipynb  cpx.csv  eason.ipynb  equilibration.ipynb  melt.csv  olivine.csv  plagioclase.csv  tests.ipynb  volatiles.ipynb  volatiles_test.ipynb
(+115 files in other folders)
