[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MagmaPandas"
version = "1.0.0"
authors = [{ name = "Thomas van Gerve" }]
description = "Pandas based tool set for geochemical processing and modelling."
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "alive_progress",
    "matplotlib-label-lines",
    "statsmodels",
    "matplotlib",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/TDGerve/MagmaPandas"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"elements.data" = ["*.csv"]
"geoplot.data" = ["*.csv"]
