[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MagmaPandas"
version = "2.2.3"
authors = [{ name = "Thomas van Gerve" }]
description = "Pandas based tool set for geochemical processing and modelling."
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas<=2.1.4",
    "numpy<=1.26.4",
    "scipy",
    "alive_progress",
    "matplotlib-label-lines",
    "statsmodels",
    "matplotlib",
    "scikit-learn",
    "elementMass >= 1.1.0",
    "typing_extensions"
]

[project.urls]
Homepage = "https://github.com/TDGerve/MagmaPandas"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"geoplot.data" = ["*.csv"]
"MagmaPandas.fO2.data" = ["*.csv"]
"MagmaPandas.Fe_redox.data" = ["*.csv", "*.rtf"]
